# HINDEX

./: .gitignore  README.md  genome_updater_bart.slurm  install_jemalloc.sh  run_test.sh
data/: SEQ0.fna
jemalloc_install/lib/pkgconfig/: jemalloc.pc
src/: CMakeLists.txt  CMakeListsOld.txt
src/external_libs/: MODIFICATIONS.md
src/external_libs/seqan3/search/dream_index/: interleaved_3way_binary_fuse_filter.hpp  interleaved_4way_binary_fuse_filter.hpp  interleaved_bloom_filter.hpp  interleaved_xor_filter.hpp
src/external_libs/seqan3/search/views/: all.hpp  fracmin_hash.hpp
src/external_libs/seqan3/utility/container/: dynamic_bitset.hpp
src/ganon/: classify.py  config.py  readme  reassign.py  report.py  util.py
src/ganon-classify/: CMakeLists.txt  CommandLineParser.cpp  GanonClassify.cpp
src/ganon-classify/include/defaults/: defaults.hpp
src/ganon-classify/include/ganon-classify/: Config.hpp
src/main/: CMakeLists.txt  build_hibff.cpp  main.cpp  store_stash_map.hpp  taxor_build.cpp  taxor_build_configuration.hpp  taxor_search.cpp  taxor_search_configuration.hpp  verify_fusor.cpp
src/seqan/: CMakeLists.txt
src/taxonomy/: parse_ncbi_taxonomy.cpp  parse_ncbi_taxonomy.hpp
tests/: test.md  test_interleaved_bff.cpp
